compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/completeFunctionArgumentsOfNestedCalls.kt
// FIR_IDENTICAL
package c

fun demo() {
    konst bar = 51
    fun map(f : <!SYNTAX!><!SYNTAX!><!>fun<!>
    konst foo = 3;
    bar <!NONE_APPLICABLE!>+<!> map { foo }
}